# AWS-PROBLEM

./: pyproject.toml  requirements.txt  setup.cfg
data/: audit_report_20251028T044824Z.json  audit_report_20251028T044824Z.txt  config_example.json  policies_example.json
src/: main.py
src/cloud_simulator/: __init__.py  audit.py  config_loader.py  encryption.py  iam.py  pentest.py  reporting.py  storage.py
