[metadata]
name = aws-problem-simulator
version = 0.1.0
author = Luis
description = Simulación de entorno en la nube con auditoría de ciberseguridad (proyecto educativo)
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.10
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    cryptography
    tabulate
    matplotlib
    pytest
    black
    flake8
    python-dotenv

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    .venv,
    __pycache__,
    build,
    dist,
    tests,
    data

[tool:pytest]
testpaths = tests
addopts = -ra -q

[coverage:run]
branch = True
source =
    src
